force-app/main/default/objects/Mastery_Statistics__c/Mastery_Statistics__c.object-meta.xml
<CustomObject>
    <description>deprecated on 30/1/2023</description>
    <label>Mastery Statistics</label>
    <nameField>
        <displayFormat>MSST-{000000}</displayFormat>
        <label>Mastery Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mastery Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>