force-app/main/default/objects/Mastery_Statistics__c/fields/icon__c.field-meta.xml
<CustomField>
    <fullName>icon__c</fullName>
    <formula>IF( 
Percent_Correct__c &lt; 0.50, 
IMAGE(&quot;/resource/red&quot;, &quot;red&quot;),
IF( Percent_Correct__c &gt;= 0.95,
IMAGE(&quot;/resource/green&quot;, &quot;green&quot;),
IMAGE(&quot;/resource/orange&quot;, &quot;orange&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>icon</label>
    <type>Text</type>
</CustomField>