force-app/main/default/objects/Mastery_Statistics__c/fields/iconstr__c.field-meta.xml
<CustomField>
    <fullName>iconstr__c</fullName>
    <formula>IF(
Percent_Correct__c &lt; 0.50,
&quot;/resource/red&quot;,
IF( Percent_Correct__c &gt;= 0.95,
&quot;/resource/green&quot;,
&quot;/resource/orange&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iconstr</label>
    <type>Text</type>
</CustomField>