force-app/main/default/objects/Mastery_Statistics__c/fields/Percent_Correct__c.field-meta.xml
<CustomField>
    <fullName>Percent_Correct__c</fullName>
    <formula>TotalAcquiredCorrect__c / ( TotalAcquiredCorrect__c + TotalAcquiredIncorrect__c + TotalAcquiredPrompted__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Correct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>