force-app/main/default/objects/Mastery_Statistics__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Mastery Statistics</relationshipLabel>
    <relationshipName>Mastery_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>