force-app/main/default/objects/Mastery_Statistics__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>