force-app/main/default/objects/Mastery_Statistics__c/fields/TotalAcquiredIncorrect__c.field-meta.xml
<CustomField>
    <fullName>TotalAcquiredIncorrect__c</fullName>
    <label>Total Acquired Incorrect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>