force-app/main/default/objects/Mastery_Statistics__c/fields/TotalAcquiredNonResponsive__c.field-meta.xml
<CustomField>
    <fullName>TotalAcquiredNonResponsive__c</fullName>
    <label>TotalAcquiredNonResponsive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>